# chat

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/bridge/: mod.rs
src/cli/: mod.rs
src/config/: mod.rs
src/core/: mod.rs
