[package]
name = "chat"
version = "0.1.0"
edition = "2021"
default-run = "chat"

[[bin]]
name = "chat"
path = "src/main.rs"

[lib]
name = "chat"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
futures = "0.3"
tokio-stream = "0.1"
